--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_AK7MT_v2"
         tools:targetApi="31">
-        <activity
-            android:name=".MainCurrecnyGBP"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+
         <activity
             android:name=".MainCurrencyUSD"
             android:exported="false">
@@ -29,7 +23,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainCurrecny_GBP"
+            android:name=".MainActivityCurrencyGBP"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
