--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_AK7MT_v2"
         tools:targetApi="31">
-
         <activity
-            android:name=".MainCurrencyUSD"
+            android:name=".MainActivityCurrencyGBP"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivityCurrencyGBP"
+            android:name=".MainActivityCurrencyUSD"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
